--- a/styles1/main.css
+++ b/styles1/main.css
@@ -33,6 +33,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-image: url('../https://i.imgur.com/W2pZ5Sg.jpg');
 }
 
 
