--- a/styles1/main.css
+++ b/styles1/main.css
@@ -6,16 +6,19 @@
   flex-wrap: wrap;
   height: 100%;
   justify-content: center;
-  height: 600px;
-  width: 600px;
+  height: 250px;
+  width: 301px;
+  margin-top: -333px;
+  
 }
 
 .grid div {
-  border: 1px solid lightgrey;
+  border: 1px solid rgb(48, 98, 48);
   flex-grow: 1;
   height: 10%;
   width: 10%;
   font-size:1vh;
+  background-color: rgb(15, 56, 15);
 }
 
 * {
@@ -33,16 +36,21 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url('../https://i.imgur.com/W2pZ5Sg.jpg');
+  background-image: url('https://d3nevzfk7ii3be.cloudfront.net/igi/i52qsvCLGdBlOTSe.large');
+  background-size: 100%;
+  background-repeat: no-repeat;
+  margin-top: 53px;
 }
 
 
 .grid div.food {
-  background-color: #01fd87;
-  box-shadow: 0  0  5px  #09fd01;
+  background-color: #9bbc0f;
+  box-shadow: 0  0  5px  #9bbc0f;
 }
 
 .grid div.snake {
-    background-color: #fd6401;
-    box-shadow: 0  0  5px  #fd6401;
+    background-color: #8bac0f;
+    box-shadow: 0  0  5px  ##8bac0f;
+
 }
+
