--- a/styles1/main.css
+++ b/styles1/main.css
@@ -6,19 +6,28 @@
   flex-wrap: wrap;
   height: 100%;
   justify-content: center;
-  height: 250px;
-  width: 301px;
+  height: 500px;
+  max-width: 500px;
   margin-top: -333px;
-  
+}
+
+div { 
+  font-size: 0px;
+}
+div.grid-item {
+  width: 30px;
+  height: 30px;
+  border: 1px solid transparent;
 }
 
 .grid div {
-  border: 1px solid rgb(48, 98, 48);
+  border: none;
   flex-grow: 1;
-  height: 10%;
-  width: 10%;
+  height: 5%;
+  width: 5%;
   font-size:1vh;
   background-color: rgb(15, 56, 15);
+  color: transparent;
 }
 
 * {
@@ -28,16 +37,14 @@
 body {
   height: 100vh;
   margin: 0;
+
 }
 
 
 .grid-wrapper {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-image: url('https://d3nevzfk7ii3be.cloudfront.net/igi/i52qsvCLGdBlOTSe.large');
-  background-size: 100%;
+  height: 70vh;
+  /* background-image: url('https://d3nevzfk7ii3be.cloudfront.net/igi/i52qsvCLGdBlOTSe.large');
+  background-size: 100%; */
   background-repeat: no-repeat;
   margin-top: 53px;
 }
@@ -53,3 +60,10 @@ body {
     box-shadow: 0  0  5px #8bac0f;
 }
 
+.grid-flex {
+  padding-top: 20vh; 
+  height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
