--- a/styles1/main.css
+++ b/styles1/main.css
@@ -1,21 +1,15 @@
 
 .grid {
   align-items: center;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2); 
   display: flex;
   flex-wrap: wrap;
   height: 100%;
   justify-content: center;
   height: 300px;
   max-width: 300px;
-  margin-top: -333px;
-}
+} 
 
-div.grid-item {
-  width: 30px;
-  height: 30px;
-  border: 1px solid transparent;
-}
 
 .grid div {
   border: none;
@@ -32,21 +26,16 @@ div.grid-item {
 }
 
 body {
-  height: 100vh;
-  margin: 0;
+  /* height: 100vh;
+  margin: 0; */
   background-color: black;
  
 }
 
 
 .grid-wrapper {
-  height: 100vh;
   background-image: url(https://static.turbosquid.com/Preview/000290/572/N7/nintendo-gameboy-color-console-3d-ma_D.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-size: 60%;
-  background-repeat: no-repeat;
-  margin-top: -77px;
+
 
 }
 
@@ -62,13 +51,5 @@ body {
 }
 
 .grid-flex {
-  padding-top: 20vh; 
-  height: 80vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
-.start-screen { 
-  background-image: url('https://static.wikia.nocookie.net/horrormovies/images/0/0f/Anaconda.jpg/revision/latest/top-crop/width/360/height/450?cb=20090924124311');
 }
