--- a/styles1/main.css
+++ b/styles1/main.css
@@ -1,3 +1,10 @@
+/* colors 
+FF0000 red 
+CC0000   other red 
+3B4CCA   blue 
+FFDE00    yellow 
+B3A125    other yellow
+ */
 
 .grid {
   align-items: center;
@@ -6,8 +13,8 @@
   flex-wrap: wrap;
   height: 100%;
   justify-content: center;
-  height: 250px;
-  max-width: 250px;
+  height: 185px;
+  max-width: 185px;
 } 
 
 
@@ -52,9 +59,10 @@ max-width: 160vh;
 }
 
 #grid-flex{ 
-  padding:100px;
+  padding: 159px;
   max-width: 140vh;
   align-items: center;
+  margin-left: 30px;
   
 }
 
