--- a/styles1/main.css
+++ b/styles1/main.css
@@ -13,8 +13,8 @@ B3A125    other yellow
   flex-wrap: wrap;
   height: 100%;
   justify-content: center;
-  height: 196px;
-  max-width: 196px;
+  height: 190px;
+  max-width: 190px;
 } 
 
 
@@ -62,7 +62,7 @@ max-width: 160vh;
 }
 
 #grid-flex{ 
-  padding: 178px;
+  padding: 158px;
   max-width: 140vh;
   align-items: center;
   margin-left: 100px;
@@ -100,3 +100,16 @@ button {
   height: 40px;
   margin:10px;
 }
+
+.hello { 
+  visibility:hidden;
+}
+
+.game-over-pic { 
+  background-image: url(https://static.turbosquid.com/Preview/000290/572/N7/nintendo-gameboy-color-console-3d-ma_D.jpg);
+  display: block;
+  visibility: visible;
+  font-size: 20px;
+  color: #B3A125;
+}
+
