--- a/styles1/main.css
+++ b/styles1/main.css
@@ -122,11 +122,18 @@ img {
   padding-left: 5px;
 }
 
-@media only screen and (max-width: 500px ) { 
-  #background-gameboy { background-image: none;}
+
+@media only screen and (max-width: 800px) { 
+  body { flex-direction: row-reverse;}
+  #flex-button { margin-left: 50px; }
+} 
+
+@media only screen and (max-width: 700px ) { 
+  #background-gameboy { background-image: none;
+  height: 80vh;}
   .grid {   height: 300px;
     max-width: 300px;
-   }
+  }
   .grid div {
       height: 5%;
       width: 5%; 
